[package]
name = "bytemuck_parsing"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "readme.md"
description = "Helpers to parse plain-old-data with `bytemuck` and `core`"
repository = "https://github.com/jamen/bytemuck_parsing"

[dependencies]
bytemuck = "1.13"

[dependencies.derive_more]
version = "0.99.17"
default-features = false
features = ["from", "display"]
